--- a/env-input.env
+++ b/env-input.env
@@ -4,8 +4,8 @@ export NSIP1='172.16.0.11'
 export NSIP2='172.16.0.14'
 export SNIP1='192.168.10.3'
 export SNIP2='193.168.15.3'
-export USERNAME='citrixservices'
-export PASSWORD='C!tr!xP@ssw0rd1!'
+export USERNAME='admin'
+export PASSWORD='Citrix123'
 
 #Additional configurations for NS-INIT
 export DNS='8.8.8.8'
