--- a/env-input.env
+++ b/env-input.env
@@ -46,7 +46,7 @@ export HTTP_VIP4_NS2='192.168.15.125' #HTTP security insight target (weak)
 export HTTP_APP4_NS2='SalesForce'
 
 # Default inputs for volume mounts
-export HDX_USECASES='./Usecases-Seeder/HDX'
+export HDX_USECASES='./HDX'
 export VIP_INPUT='./vip-input/vips.csv'
 
 # Open IP's for container resources.
