--- a/env-input.env
+++ b/env-input.env
@@ -47,7 +47,7 @@ export HTTP_APP4_NS2='SalesForce'
 
 # Default inputs for volume mounts
 export HDX_USECASES='./HDX'
-export VIP_INPUT='./vip-input/vips.csv'
+export VIP_INPUT='./vips.csv'
 
 # Open IP's for container resources.
 export BULK_SERVER_1="172.16.10.46" #IP of local docker host that will host HTTP/HTTPS webservices
