--- a/mas-insight-stack.yaml
+++ b/mas-insight-stack.yaml
@@ -304,7 +304,7 @@ services:
     image: registry.americasreadiness.com:5000/gateway-insight:v2
     environment:
       - MAS=${MAS}
-      - SRCIP=${NSIP1}
+      - SRCIP=172.16.10.31
     restart: always
     logging:
       driver: json-file
