--- a/env-input.env
+++ b/env-input.env
@@ -50,7 +50,7 @@ export HDX_USECASES='./HDX'
 export VIP_INPUT='./vips.csv'
 
 # Open IP's for container resources.
-export BULK_SERVER_1="172.16.10.46" #IP of local docker host that will host HTTP/HTTPS webservices
+export BULK_SERVER_1="172.16.10.46"
 export BULK_SERVER_2="172.16.10.45" 
 export BULK_SERVER_3="192.168.15.145"
 export BULK_SERVER_4="192.168.15.146"
