--- a/env-input.env
+++ b/env-input.env
@@ -62,6 +62,10 @@ export CRAWLER_1="192.168.10.201"
 export CRAWLER_2="192.168.10.202"
 export CRAWLER_3="192.168.10.203"
 export CRAWLER_4="192.168.10.204"
+export CRAWLER_5="192.168.10.205"
+export CRAWLER_6="192.168.10.206"
+export CRAWLER_7="192.168.10.207"
+export CRAWLER_8="192.168.10.208"
 export SSL_INSIGHT_1="172.16.10.61"
 export SSL_INSIGHT_2="172.16.10.62"
 export SSL_INSIGHT_3="172.16.10.63"
